[gd_scene load_steps=5 format=3 uid="uid://1i4wkabq5sfi"]

[ext_resource type="Script" path="res://Components/TimeTrackingPanel/NormalTimeTrackingPanel.gd" id="1_p8nb0"]
[ext_resource type="FontFile" uid="uid://dgo3gq4223vpb" path="res://Assets/Fonts/NovaMono-Regular.ttf" id="1_rhg3x"]
[ext_resource type="Theme" uid="uid://htmic41t2nu8" path="res://Components/TimeTrackingPanel/Theme/TimeTrackingControls.tres" id="2_wpqvl"]

[sub_resource type="LabelSettings" id="LabelSettings_kcyxq"]
font = ExtResource("1_rhg3x")
font_size = 32

[node name="NormalTimeTracking" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p8nb0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "11:15:44"
label_settings = SubResource("LabelSettings_kcyxq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
alignment = 2

[node name="StartButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_wpqvl")
text = "Start"

[node name="PauseButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_wpqvl")
text = "Pause"

[node name="FinishButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_wpqvl")
text = "Finish"

[node name="CancelButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_wpqvl")
text = "Cancel"

[node name="ItemInput" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_wpqvl")
text = "Item name"
